feat: add rack feature
