# internal/delivery/api/handler/rack.go
@@ -1,0 +1,196 @@
+package handler
+
+import (
+	"gitlab.com/stoqu/stoqu-be/internal/delivery/api/middleware"
+	"gitlab.com/stoqu/stoqu-be/internal/factory"
+	abstraction "gitlab.com/stoqu/stoqu-be/internal/model/abstraction"
+	"gitlab.com/stoqu/stoqu-be/internal/model/dto"
+	model "gitlab.com/stoqu/stoqu-be/internal/model/entity"
+	res "gitlab.com/stoqu/stoqu-be/pkg/util/response"
+
+	"github.com/labstack/echo/v4"
+)
+
+type (
+	rack struct {
+		Factory factory.Factory
+	}
+	Rack interface {
+		Route(g *echo.Group)
+		Get(c echo.Context) error
+		GetByID(c echo.Context) error
+		Create(c echo.Context) error
+		Update(c echo.Context) error
+		Delete(c echo.Context) error
+	}
+)
+
+func NewRack(f factory.Factory) Rack {
+	return &rack{f}
+}
+
+func (h *rack) Route(g *echo.Group) {
+	g.GET("", h.Get, middleware.Authentication)
+	g.GET("/:id", h.GetByID, middleware.Authentication)
+	g.POST("", h.Create, middleware.Authentication)
+	g.PUT("/:id", h.Update, middleware.Authentication)
+	g.DELETE("/:id", h.Delete, middleware.Authentication)
+}
+
+// Get rack
+// @Summary Get rack
+// @Description Get rack
+// @Tags rack
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @param request query abstraction.Filter true "request query"
+// @Param entity query model.RackEntity false "entity query"
+// @Success 200 {object} dto.RackResponseDoc
+// @Failure 400 {object} res.errorResponse
+// @Failure 404 {object} res.errorResponse
+// @Failure 500 {object} res.errorResponse
+// @Router /api/racks [get]
+func (h *rack) Get(c echo.Context) error {
+	filter := abstraction.NewFilterBuiler[model.RackEntity](c, "racks")
+	if err := c.Bind(filter.Payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.BadRequest, err).Send(c)
+	}
+	filter.Bind()
+
+	result, pagination, err := h.Factory.Usecase.Rack.Find(c.Request().Context(), *filter.Payload)
+	if err != nil {
+		return res.ErrorResponse(err).Send(c)
+	}
+
+	return res.CustomSuccessBuilder(200, result, "Get racks success", &pagination).Send(c)
+}
+
+// Get rack by id
+// @Summary Get rack by id
+// @Description Get rack by id
+// @Tags rack
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id path string true "id path"
+// @Success 200 {object} dto.RackResponseDoc
+// @Failure 400 {object} res.errorResponse
+// @Failure 404 {object} res.errorResponse
+// @Failure 500 {object} res.errorResponse
+// @Router /api/racks/{id} [get]
+func (h *rack) GetByID(c echo.Context) error {
+	ctx := c.Request().Context()
+
+	payload := new(dto.ByIDRequest)
+	if err := c.Bind(payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.BadRequest, err).Send(c)
+	}
+	if err := c.Validate(payload); err != nil {
+		response := res.ErrorBuilder(res.Constant.Error.Validation, err)
+		return response.Send(c)
+	}
+
+	result, err := h.Factory.Usecase.Rack.FindByID(ctx, *payload)
+	if err != nil {
+		return res.ErrorResponse(err).Send(c)
+	}
+	return res.SuccessResponse(result).Send(c)
+}
+
+// Create rack
+// @Summary Create rack
+// @Description Create rack
+// @Tags rack
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param request body dto.CreateRackRequest true "request body"
+// @Success 200 {object} dto.RackResponseDoc
+// @Failure 400 {object} res.errorResponse
+// @Failure 404 {object} res.errorResponse
+// @Failure 500 {object} res.errorResponse
+// @Router /api/racks [post]
+func (h *rack) Create(c echo.Context) error {
+	ctx := c.Request().Context()
+
+	payload := new(dto.CreateRackRequest)
+	if err := c.Bind(payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.BadRequest, err).Send(c)
+	}
+	if err := c.Validate(payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.Validation, err).Send(c)
+	}
+
+	result, err := h.Factory.Usecase.Rack.Create(ctx, *payload)
+	if err != nil {
+		return res.ErrorResponse(err).Send(c)
+	}
+
+	return res.SuccessResponse(result).Send(c)
+}
+
+// Update rack
+// @Summary Update rack
+// @Description Update rack
+// @Tags rack
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id path string true "id path"
+// @Param request body dto.UpdateRackRequest true "request body"
+// @Success 200 {object} dto.RackResponseDoc
+// @Failure 400 {object} res.errorResponse
+// @Failure 404 {object} res.errorResponse
+// @Failure 500 {object} res.errorResponse
+// @Router /api/racks/{id} [put]
+func (h *rack) Update(c echo.Context) error {
+	ctx := c.Request().Context()
+
+	payload := new(dto.UpdateRackRequest)
+	if err := c.Bind(&payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.BadRequest, err).Send(c)
+	}
+	if err := c.Validate(payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.Validation, err).Send(c)
+	}
+
+	result, err := h.Factory.Usecase.Rack.Update(ctx, *payload)
+	if err != nil {
+		return res.ErrorResponse(err).Send(c)
+	}
+
+	return res.SuccessResponse(result).Send(c)
+}
+
+// Delete rack
+// @Summary Delete rack
+// @Description Delete rack
+// @Tags rack
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param id path string true "id path"
+// @Success 200 {object} dto.RackResponseDoc
+// @Failure 400 {object} res.errorResponse
+// @Failure 404 {object} res.errorResponse
+// @Failure 500 {object} res.errorResponse
+// @Router /api/racks/{id} [delete]
+func (h *rack) Delete(c echo.Context) error {
+	ctx := c.Request().Context()
+
+	payload := new(dto.ByIDRequest)
+	if err := c.Bind(payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.BadRequest, err).Send(c)
+	}
+	if err := c.Validate(payload); err != nil {
+		return res.ErrorBuilder(res.Constant.Error.Validation, err).Send(c)
+	}
+
+	result, err := h.Factory.Usecase.Rack.Delete(ctx, *payload)
+	if err != nil {
+		return res.ErrorResponse(err).Send(c)
+	}
+
+	return res.SuccessResponse(result).Send(c)
+}
